# dau-build

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitignore  MANIFEST.in  Makefile  README.md  end_to_end.py  end_to_end_builder.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/csp/: index.doctree
.doctrees/autoapi/csp_autogen/: index.doctree
.doctrees/ccflow/examples/: narwhals_pipelines.doctree
.doctrees/deprecated-1.3.1.dist-info/licenses/: LICENSE.doctree
.doctrees/docs/explanation/: architecture.doctree
.doctrees/docs/how-to/: extend-dau-build.doctree  program-hardware.doctree  run-a-build.doctree
.doctrees/docs/reference/: commands.doctree  config-groups.doctree  tasks-and-steps.doctree
.doctrees/docs/tutorial/: first-build.doctree
.doctrees/narwhals-2.23.0.dist-info/licenses/: LICENSE.doctree
.doctrees/numpy/ma/: README.doctree
.doctrees/numpy/random/: LICENSE.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  docs.yaml
_modules/: csp.html  index.html
_modules/csp/: baselib.html  basketlib.html  curve.html  dataframe.html  math.html  profiler.html  random.html  showgraph.html  stats.html  typing.html
_modules/csp/adapters/: arrow.html  csv.html  db.html  kafka.html  parquet.html  status.html  utils.html  websocket_types.html
_modules/csp/impl/: adaptermanager.html  enum.html  error_handling.html  genericpushadapter.html  mem_cache.html  outputadapter.html  pandas.html  pandas_accessor.html  pandas_ext_type.html  pulladapter.html  pushadapter.html  pushpulladapter.html  struct.html  warnings.html
_modules/csp/tests/: test_baselib.html  test_basketlib.html  test_baskets.html  test_build.html  test_curve.html  test_dynamic.html  test_graph_mem_cache.html  test_history.html  test_math.html  test_numba_features.html  test_numba_type_checking.html  test_parsing.html  test_random.html  test_stats.html  test_strict_structs.html  test_type_checking.html  test_typing.html
_modules/csp/utils/: csp_watch_profile.html  datetime.html
_sources/: index.md.txt
_sources/docs/explanation/: architecture.md.txt
_sources/docs/how-to/: program-hardware.md.txt
_sources/docs/reference/: commands.md.txt  config-groups.md.txt  tasks-and-steps.md.txt
_sources/docs/tutorial/: first-build.md.txt
autoapi/csp/: index.html
autoapi/csp/adapters/: index.html
autoapi/csp/baselib/: index.html
autoapi/csp/basketlib/: index.html
autoapi/csp/curve/: index.html
autoapi/csp/dataframe/: index.html
autoapi/csp/impl/: index.html
autoapi/csp/math/: index.html
autoapi/csp/profiler/: index.html
autoapi/csp/random/: index.html
autoapi/csp/showgraph/: index.html
autoapi/csp/stats/: index.html
autoapi/csp/tests/: index.html
autoapi/csp/typing/: index.html
autoapi/csp/utils/: index.html
autoapi/csp_autogen/: index.html
ccflow/examples/: narwhals_pipelines.html
dau_build/: __init__.py  artifact_bundle.py  build_config.py  build_spec.py  build_steps.py  cli.py  dpv1_shell.py  hardware_plan.py  nitefury.py  packaging.py  platforms.py  programmers.py  scan_composition.py  shell_build.py  shell_tops.py  simulation_profiles.py  sv_contract.py  svparser.py  synthesize_cores.py  utils.py  vivado.py  vivado_backend.py  yosys_backend.py
dau_build/benchmark/: __init__.py  all.py  error.py  graph.py  onnx.py
dau_build/config/: __init__.py  base.yaml
dau_build/config/callable/: callable.yaml
dau_build/config/platform/: dpv1.yaml
dau_build/config/step/: explain.yaml  generate.yaml  resolved-config.yaml  synthesis.yaml  write.yaml
dau_build/config/task/: build-shell-project.yaml  build-vivado-artifacts.yaml  flash.yaml  overlay-build.yaml
dau_build/data/: basic.py
dau_build/finn/: __init__.py  build.py  clean.py  common.py  conversion.py  dataflow.py  driver.py  example.py  hls.py  package.py  partition_and_specialize.py  specialize.py  streamline.py  tidy.py  zip.py
dau_build/models/: simple.py
dau_build/profiles/: __init__.py  dau-core-verilator-profiles.artifacts.yaml  dau-core-verilator-profiles.yaml
dau_build/profiles/sv/: dau_int32_aggregation_tile_tb.sv  dau_int32_arrow_lite_stream_aggregation_tb.sv  dau_int32_stream_aggregation_tb.sv
dau_build/sv/: cam.sv  cam_ifc.sv  cam_tb.sv  cam_tb_modport.svtodo  cam_testing_env.svh  cam_top.sv  cam_transaction.svh  ceff.sv  decoder.sv  doubler.sv  doubler_engine.sv  doubler_engine_wrapper.v  equality_checker.sv  mux.sv  priorityencoder.sv  register_.sv  sim_sv.cpp
dau_build/tcl/: util.tcl
dau_build/tests/: example_verilog.py  test_all.py  test_amaranth_wrap.py  test_artifact_bundle.py  test_build_config.py  test_build_spec.py  test_build_steps.py  test_build_tasks.py  test_cfg_cli.py  test_config.py  test_config_source.py  test_counter.py  test_doubler.py  test_dpv1_shell.py  test_env.py  test_examples.py  test_hardware_plan.py  test_nitefury.py  test_packaging.py  test_platforms.py  test_scan_composition.py  test_scan_composition_sim.py  test_shell_build.py  test_shell_tops.py  test_simulate_profile_task.py  test_simulation_profiles.py  test_sv_contract.py  test_svparser.py  test_synthesize_cores.py  test_yosys_backend.py
dau_build/tests/cocotb_benches/: dau_mm_ohlcv_job_tb.py  (+3 more)
dau_build/utilities/: __init__.py  dir.py  log.py  netron.py
deprecated-1.3.1.dist-info/licenses/: LICENSE.html
docs/explanation/: architecture.html  architecture.md
docs/how-to/: extend-dau-build.html  extend-dau-build.md  program-hardware.html  program-hardware.md  run-a-build.html  run-a-build.md
docs/reference/: commands.html  commands.md  config-groups.html  config-groups.md  tasks-and-steps.html  tasks-and-steps.md
docs/tutorial/: first-build.html  first-build.md
examples/identity/: dau-build.yaml  package.artifacts.yaml
hydra_plugins/dau/: __init__.py  config_source.py  search_path.py
narwhals-2.23.0.dist-info/licenses/: LICENSE.html
numpy/ma/: README.html
numpy/random/: LICENSE.html
(+459 files in other folders)
