[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dau-build"
description = "Build tools for dau projects"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Tim Paine", email = "t.paine154@gmail.com" },
]
keywords = [
    "soc",
    "hardware",
    "fpga",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

# https://github.com/Xilinx/finn/blob/dev/fetch-repos.sh
# "https://github.com/xilinx/brevitas/archive/84f42259ec869eb151af4cb8a8b23ad925f493db.zip",
# "https://github.com/xilinx/maltanar/pyverilator/ce0a08c20cb8c1d1e84181d6f392390f846adbd1.zip",
# "https://github.com/xilinx/finn/archive/39fb8859fec0e47276ffadcafe43092d1b10af7e.zip",
# "https://github.com/Xilinx/finn-experimental/archive/7a587b2ccc8fbd4daaec946f3bc66c273f85451b.zip",
# "https://github.com/xilinx/finn-hlslib/archive/16e5847a5e3ef76cffe84c8fad2f010d593457d3.zip",
# "https://github.com/fastmachinelearning/qonnx/archive/fd61cfeebbdaba351abf7e9d54cd785d7776fa4f.zip",
dependencies = [
    # Core
    "brevitas@git+https://github.com/xilinx/brevitas#egg=84f42259ec869eb151af4cb8a8b23ad925f493db",
    "pyverilator@git+https://github.com/maltanar/pyverilator#egg=ce0a08c20cb8c1d1e84181d6f392390f846adbd1",
    "finn@git+https://github.com/xilinx/finn#egg=39fb8859fec0e47276ffadcafe43092d1b10af7e",
    "finn-experimental@git+https://github.com/xilinx/finn-experimental#egg=7a587b2ccc8fbd4daaec946f3bc66c273f85451b",
    # "finn-hlslib@git+https://github.com/xilinx/finn-hlslib#egg=16e5847a5e3ef76cffe84c8fad2f010d593457d3",
    "qonnx@git+https://github.com/fastmachinelearning/qonnx#egg=fd61cfeebbdaba351abf7e9d54cd785d7776fa4f",

    # Normal ones
    "bitstring",
    "clize",
    "dataclasses-json",
    "gspread==3.6.0",
    "importlib-resources",
    "ipython",
    "numpy",
    "onnx",
    "onnxoptimizer",
    "onnxruntime",
    "protobuf>=3.20,<4",
    "psutil",
    "pyscaffold==4.4",
    "scipy",
    "setupext-janitor>=1.1.2",
    "setuptools",
    "sigtools",
    "toposort",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "torchaudio==0.13.1",
    "jupyterlab>=4",
    "matplotlib>=3.7",
    "netron>=5.0.0",
    "pandas>=1.5,<2",
    "scikit-learn>=1.2,<1.3",
    "tqdm",
    "deap",
    "mip",
    "networkx",
    "future-annotations",
    "tokenize-rt==4.2.1",
    "tclwrapper",

    # Extras
    "colorlog",
]

[project.optional-dependencies]
develop = [
    "bump-my-version",
    "check-manifest",
    "ruff>=0.5,<0.6",
    # test
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/dau-dev/dau-build"
homepage = "https://github.com/dau-dev/dau-build"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = false

[[tool.bumpversion.files]]
filename = "dau_build/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.coverage.run]
branch = true
omit = [
    "dau_build/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "dau_build/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["dau_build"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
